fix to header text on mobile

--- a/_sass/device.scss
+++ b/_sass/device.scss
@@ -24,7 +24,7 @@
 
         h1 {
             line-height: 48px;
-            font-size: 24px;
+            font-size: 16px;
             margin: 0px;
         }
 
